--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack": "^4.40.1",
     "webpack-cli": "^3.3.8"
   },
-  "private": "true",
+  "private": true,
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "autoprefixer": "^9.6.1",
